# AkihaPixelSimGame

./: .gitignore  CMakeLists.txt  EngineLink  README.md  imgui.ini  props.json
Assets/Shaders/: FragLightCombine.glsl
GameAssets/: Root.node
GameAssets/Components/Game/: CollisionBox.cpp  CollisionBox.h  GameBody.cpp  GameBody.h  PlayerController.cpp  PlayerController.h  WorldCollidable.h
GameAssets/Components/Game/Tools/: ElementDrawer.cpp  ElementDrawer.h  ElementEraser.cpp  ElementEraser.h
GameAssets/Components/World/: Chunk.cpp  Chunk.h  Element.cpp  Element.h  Particle.cpp  Particle.h  World.cpp  World.h
GameAssets/Components/World/Elements/: BouncyWaterFail  CommonBeahaviours.cpp  CommonBehaviours.h  Grass.cpp  Grass.h  Sand.cpp  Sand.h  Soil.cpp  Soil.h  Stone.cpp  Stone.h  Water.cpp  Water.h
GameAssets/Components/World/Shaders/: TemperatureShader.sp  ThermalFrag.glsl  ThermalVert.glsl
GameAssets/Materials/: Cat.mtljson  DirtyFloor.mtljson  DirtyWall.mtljson  Leaves.mtljson  Miku.mtljson  Osaka.mtljson  PinkCheckerboard.mtljson  Sky.mtljson
GameAssets/res/shaders/: shaderprograms.json
